libvcx (0.4.2) unstable; urgency=medium

[ Hyperledger ]

## 0.4.2
* Extended provisioning config to accept optional `did_method` filed. This field should be used to create fully qualified DIDs.
  The format of identifiers used on CredentialIssuance and ProofPresentation will determine based on the type of remote DID.
* Bugfixes

## 0.4.1
* Supported endorsing of transactions in Libvcx.
    * `vcx_*_prepare_for_endorser` - functions for `schema` and `credentialdef` which build transaction and crete internal object in differed state.
    * `vcx_*_update_state` and `vcx_*_get_state` - functions to update/get state of `schema`/`credentialdef` internal object.
    * `vcx_endorse_transaction` - function to endorse a transaction.
* Supported sign/verify with payment address functionality in Libvcx.
    * `vcx_wallet_sign_with_address` - to sign a message with a payment address.
    * `vcx_wallet_verify_with_address` - to verify a signature with a payment address.
* Extended Libvcx initialization config to accept pool configuration.
* Bugfixes

* 0.4.0
* Added a set of new APIs around credentials and proofs that work with messages that should be exchanged without handling the transport of those messages.
This removes the dependency on an agency/cloud-agent and allows the user of the SDK to transport those messages themselves.
There are two types of functions:
    * `vcx_*_get_request_msg` - gets a message that can be sent to the specified connection.
    * `vcx_*_update_state_with_message` - checks for any state change from the given message and updates the the state attribute.
* Added new *EXPEREMENTAL* functions to get requirements and price for a ledger request.
    * `vcx_get_request_price` - returns request minimal request price for performing an action in case the requester can do it.
* Updated Indy-SDK CI/CD pipelines to test, to build and to publish Android artifacts for Libvcx.
* Bugfixes:
    * Android Crash upon logging
    * others minor bugfixes

* 0.3.2