@@ -77,6 +77,22 @@ pub struct TemporaryCredentialDefinition {
     pub cred_def_correctness_proof: CredentialDefinitionCorrectnessProof
 }
 
+impl CredentialDefinition {
+    pub fn to_unqualified(self) -> CredentialDefinition {
+        match self {
+            CredentialDefinition::CredentialDefinitionV1(cred_def) => {
+                CredentialDefinition::CredentialDefinitionV1(CredentialDefinitionV1 {
+                    id: cred_def.id.to_unqualified(),
+                    schema_id: cred_def.schema_id.to_unqualified(),
+                    signature_type: cred_def.signature_type,
+                    tag: cred_def.tag,
+                    value: cred_def.value,
+                })
+            }
+        }
+    }
+}
+
 impl From<CredentialDefinition> for CredentialDefinitionV1 {
     fn from(cred_def: CredentialDefinition) -> Self {
         match cred_def {
