@@ -26,6 +26,18 @@ pub struct CredentialRequestMetadata {
     pub master_secret_name: String
 }
 
+impl CredentialRequest {
+    pub fn to_unqualified(self) -> CredentialRequest {
+        CredentialRequest {
+            prover_did: self.prover_did.to_unqualified(),
+            cred_def_id: self.cred_def_id.to_unqualified(),
+            blinded_ms: self.blinded_ms,
+            blinded_ms_correctness_proof: self.blinded_ms_correctness_proof,
+            nonce: self.nonce
+        }
+    }
+}
+
 impl Validatable for CredentialRequest {
     fn validate(&self) -> Result<(), String> {
         self.cred_def_id.validate()?;
