@@ -85,6 +85,22 @@ pub enum RevocationRegistryDefinition {
     RevocationRegistryDefinitionV1(RevocationRegistryDefinitionV1)
 }
 
+impl RevocationRegistryDefinition {
+    pub fn to_unqualified(self) -> RevocationRegistryDefinition {
+        match self {
+            RevocationRegistryDefinition::RevocationRegistryDefinitionV1(rev_ref_def) => {
+                RevocationRegistryDefinition::RevocationRegistryDefinitionV1(RevocationRegistryDefinitionV1 {
+                    id: rev_ref_def.id.to_unqualified(),
+                    revoc_def_type: rev_ref_def.revoc_def_type,
+                    tag: rev_ref_def.tag,
+                    cred_def_id: rev_ref_def.cred_def_id.to_unqualified(),
+                    value: rev_ref_def.value,
+                })
+            }
+        }
+    }
+}
+
 impl From<RevocationRegistryDefinition> for RevocationRegistryDefinitionV1 {
     fn from(rev_reg_def: RevocationRegistryDefinition) -> Self {
         match rev_reg_def {
