@@ -3452,14 +3452,57 @@ mod high_cases {
 
     mod to_unqualified {
         use super::*;
+        use utils::domain::anoncreds::schema::SchemaV1;
+        use utils::domain::anoncreds::credential_definition::CredentialDefinitionV1;
+        use utils::domain::anoncreds::credential_offer::CredentialOffer;
+        use utils::domain::anoncreds::credential_request::CredentialRequest;
 
         #[test]
-        fn to_unqualified() {
-            let qualified = "did:sov:NcYxiDXkpYi6ov5FcYDi1e";
-            let unqualified = "NcYxiDXkpYi6ov5FcYDi1e";
+        fn to_unqualified_ids() {
+            assert_eq!(DID_MY1, anoncreds::to_unqualified(DID_MY1_V1).unwrap());
+            assert_eq!(DID_MY1, anoncreds::to_unqualified(DID_MY1).unwrap());
 
-            assert_eq!(unqualified, anoncreds::to_unqualified(qualified).unwrap());
-            assert_eq!(unqualified, anoncreds::to_unqualified(unqualified).unwrap());
+            assert_eq!(anoncreds::gvt_schema_id(), anoncreds::to_unqualified(&anoncreds::gvt_schema_id_fully_qualified()).unwrap());
+            assert_eq!(anoncreds::gvt_cred_def_id(), anoncreds::to_unqualified(&anoncreds::gvt_cred_def_id_fully_qualified()).unwrap());
+            assert_eq!(anoncreds::local_gvt_cred_def_id(), anoncreds::to_unqualified(&anoncreds::local_gvt_cred_def_id_fully_qualified()).unwrap());
+        }
+
+        #[test]
+        fn to_unqualified_objects() {
+            let setup = Setup::wallet();
+
+            let (schema_id, schema_json) = anoncreds::issuer_create_schema(ISSUER_DID_V1, GVT_SCHEMA_NAME, SCHEMA_VERSION, GVT_SCHEMA_ATTRIBUTES).unwrap();
+
+            assert_eq!(anoncreds::gvt_schema_id(), anoncreds::to_unqualified(&schema_id).unwrap());
+
+            let schema_json_un = anoncreds::to_unqualified(&schema_json).unwrap();
+            let schema: SchemaV1 = ::serde_json::from_str(&schema_json_un).unwrap();
+            assert_eq!(anoncreds::gvt_schema_id(), schema.id.0);
+
+            let (cred_def_id, cred_def_json) = anoncreds::issuer_create_credential_definition(setup.wallet_handle, ISSUER_DID_V1, &schema_json, TAG_1, None, None).unwrap();
+
+            assert_eq!(anoncreds::local_gvt_cred_def_id(), anoncreds::to_unqualified(&cred_def_id).unwrap());
+
+            let cred_def_json_un = anoncreds::to_unqualified(&cred_def_json).unwrap();
+            let cred_def: CredentialDefinitionV1 = ::serde_json::from_str(&cred_def_json_un).unwrap();
+            assert_eq!(anoncreds::local_gvt_cred_def_id(), cred_def.id.0);
+            assert_eq!(anoncreds::gvt_schema_id(), cred_def.schema_id.0);
+
+            let cred_offer_json = anoncreds::issuer_create_credential_offer(setup.wallet_handle, &cred_def_id).unwrap();
+
+            let cred_offer_json_un = anoncreds::to_unqualified(&cred_offer_json).unwrap();
+            let cred_offer: CredentialOffer = ::serde_json::from_str(&cred_offer_json_un).unwrap();
+            assert_eq!(anoncreds::local_gvt_cred_def_id(), cred_offer.cred_def_id.0);
+            assert_eq!(anoncreds::gvt_schema_id(), cred_offer.schema_id.0);
+
+            anoncreds::prover_create_master_secret(setup.wallet_handle, COMMON_MASTER_SECRET).unwrap();
+
+            let (cred_req_json, _) = anoncreds::prover_create_credential_req(setup.wallet_handle, DID_MY1_V1, &cred_offer_json, &cred_def_json_un, COMMON_MASTER_SECRET).unwrap();
+
+            let cred_req_json_un = anoncreds::to_unqualified(&cred_req_json).unwrap();
+            let cred_req: CredentialRequest = ::serde_json::from_str(&cred_req_json_un).unwrap();
+            assert_eq!(DID_MY1.to_string(), cred_req.prover_did.0);
+            assert_eq!(anoncreds::local_gvt_cred_def_id(), cred_req.cred_def_id.0);
         }
     }
 }
