@@ -931,7 +931,7 @@ This function should be used to the proper casting of fully qualified entity to 
 2) Verifier prepares a Proof Request based on fully qualified identifiers or Prover, which doesn't support fully qualified identifiers.
 3) another case when casting to unqualified form needed
 
-* `entity`: String - target entity to disqualify. Can be one of: Did, SchemaId, CredentialDefinitionId, RevocationRegistryId, CredentialOffer.
+* `entity`: String - target entity to disqualify. Can be one of: Did, SchemaId, CredentialDefinitionId, RevocationRegistryId, Schema, CredentialDefinition, RevocationRegistryDefinition, CredentialOffer, CredentialRequest, ProofRequest.
 * __->__ `res`: Json - entity either in unqualified form or original if casting isn't possible
 
 ### blob_storage
